[tool.poetry]
name = "es-conn"
version = "0.1.0"
description = ""
authors = ["reinaldopenno <rapenno@gmail.com>"]
readme = "README.md"
packages = [{include = "es_conn"}]

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "8.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
